fixed link color contrast

--- a/FinnFragen.Web/wwwroot/css/site.dark.css
+++ b/FinnFragen.Web/wwwroot/css/site.dark.css
@@ -1,3 +1,7 @@
 ﻿#logo {
     content: url("/assets/smalllogo-black.png");
 }
+
+a {
+    color: #769dc4;
+}
